[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/attack1_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/attack1_4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/attack1_2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/attack1_6.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/walk_5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/attack1_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/walk_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/walk_3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/walk_4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/walk_6.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/walk_1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Monsters/skeleton_sword/attack1_5.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Skeleton.gd" type="Script" id=13]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=14]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=15]
[ext_resource path="res://Overlap/PlayerDetectionZone.tscn" type="PackedScene" id=16]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 4 ) ],
"loop": true,
"name": "Attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 10 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.75, 1.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 17.75, 12.5 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.0
height = 14.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.875, 6 )

[node name="Ennemy" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Attack"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.75, 4 )
shape = SubResource( 2 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 16 )]
position = Vector2( -1, 3 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.243137 )
shape = SubResource( 5 )

[node name="Hurtbox" parent="." instance=ExtResource( 15 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 14 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 15.125, -1 )
shape = SubResource( 3 )

[node name="HitTimer" type="Timer" parent="Hitbox"]

[node name="Stats" parent="." instance=ExtResource( 17 )]
max_health = 4

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
